# HolonPolis

./: .gitignore  AGENTS.md  README.md  build_cyberpunk_mall.py  cyberpunk_mall_project.py  dashboard_project.py  demo_holon_self_evolution.py  demo_holon_society.py  generate_dashboard_react.py  holon_evolve_react_skill.py  holon_self_evolve.py  learn_repo.py  pyproject.toml  run.py  stress_test_cyberpunk.py  test_chat_holon.py  test_seed_agent.py
.claude/: settings.local.json
docs/: EVOLUTIONARY_ECOSYSTEM.md  meta-auto.md
scripts/: incubate_autonomous_game_project.py  run_holon_points_league.py  run_holon_prediction_tournament.py  stress_autonomous_fish_mmo_project.py  stress_mmo_fish_game.py  stress_mmo_lightning_game.py
src/holonpolis/: __init__.py  bootstrap.py  config.py
src/holonpolis/api/: __init__.py  dependencies.py  main.py  providers.py
src/holonpolis/domain/: __init__.py  blueprints.py  errors.py  events.py  memory.py  skills.py  social.py
src/holonpolis/genesis/: __init__.py  evolution_lord.py  genesis_memory.py
src/holonpolis/infrastructure/: __init__.py  logging_setup.py  time_utils.py
tests/: conftest.py  test_evolution.py  test_file_tools.py  test_genesis.py  test_holons_capabilities_api.py  test_import_cycles.py  test_infra_path_guard.py  test_infra_settings_utils.py  test_integration.py  test_llm_provider_config.py  test_llm_runtime_providers.py  test_memory_isolation.py  test_project_incubation_service.py  test_runtime_capabilities.py  test_social_services.py
tests/kernel/: test_lancedb.py  test_path_guard.py  test_sandbox_runner.py
(+58 files in other folders)
